[tool.poetry]
name = "lab_pokemon"
version = "0.1.0"
description = ""
authors = ["Chris <chris@chrisproctor.net>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.11"
jupyterlab = "^3.3.3"
pandas = "^1.4.2"
matplotlib = "^3.5.1"
seaborn = "^0.11.2"
requests = "^2.27.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
